# ACARP-Sort

./: ARCHITECTURE.md  CAPSULE.md  CMakeLists.txt  README.md  WHITE_PAPER.md  acarp_sort.hpp  bench_v2  benchmark_acarp.cpp  benchmark_v1_vs_v2.cpp
include/acarp/v2/: acarp_v2_distribution.hpp  acarp_v2_simd_buffer.hpp  acarp_v2_simd_ghost.hpp
